# BookClub

./: .gitignore  New book club app notes.docx  firebase-sdk.json  main.py  pyproject.toml  requirements.txt
static/assets/css/: main.css
static/data/: bookdata.xlsx
static/data/firebase/: bookdata.csv  firebase-sdk.json
templates/: add.html  books.html  index.html  ranking.html  search.html  stats.html
